# binpacker1d

./: Cargo.toml  build.rs
src/: ffi.rs  lib.rs  optimizer.rs  population.rs
